--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">
 
@@ -51,7 +51,7 @@ ga('send', 'pageview');
     <!-- Begin Logo -->
 		<div class="mainheading">
 			<a class="navbar-brand" href="{{ site.baseurl }}/">
-		    <h1 class="sitetitle">{{ site.name }}</h1>
+		    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
 			</a>
 		</div>
     <!-- End Logo -->
