--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@ ga('send', 'pageview');
     <!-- Begin Logo -->
 		<div class="mainheading">
 			<a class="navbar-brand" href="{{ site.baseurl }}/">
-		    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+		    <img src="" alt="{{ site.name }}">
 			</a>
 		</div>
     <!-- End Logo -->
