--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@ ga('send', 'pageview');
     <!-- Begin Logo -->
 		<div class="mainheading">
 			<a class="navbar-brand" href="{{ site.baseurl }}/">
-		    <img src="" alt="{{ site.name }}">
+		    <h3>{{ site.name }}</h3>
 			</a>
 		</div>
     <!-- End Logo -->
