--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,6 +107,16 @@ ga('send', 'pageview');
 
 <div class="container">
 
+<!-- Site Title
+================================================== -->
+<div class="mainheading">
+    <h1 class="sitetitle">{{ site.name }}</h1>
+    <p class="lead">
+        {{ site.description }}
+    </p>
+</div>	
+
+
 <!-- Content
 ================================================== -->
 <div class="main-content">
