--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,11 @@ ga('send', 'pageview');
     <div class="container pr-0">
 
     <!-- Begin Logo -->
-		<div class="mainheading">
-			<a class="navbar-brand" href="{{ site.baseurl }}/">
-		    <h1>{{ site.name }}</h1>
-			</a>
-		</div>
+    <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    </a>
     <!-- End Logo -->
-
+	    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
