--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
+<script data-ad-client="ca-pub-3791924006160853" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 </head>
 
 {% if jekyll.environment == 'production' %}
